made it work for easy question only for now

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
         <div id="Stats">
             <h1 id="totalscore">Total Score</h1>
             <p id="score">score</p>
-            <h1 id="progress">Progress</h1>
+            <h1 id="progress">Questions Left</h1>
             <p id="questionsleft">number Left</p>
         </div>
         <button id="restart" class="button">Restart Quiz</button>
+    </div>
+    <div id="end" style="display: none;">
+        <h1 id="endTitle">You got a Score of:</h1>
+        <p id="endingScore">Ending Score</p>
     </div>
     <script src="init.js"></script>
 </body>
