finished main functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 id="progress">Questions Left</h1>
             <p id="questionsleft">number Left</p>
         </div>
-        <button id="restart" class="button">Restart Quiz</button>
+        <button id="restart" class="button" style="display: none;">Restart Quiz</button>
     </div>
     <div id="end" style="display: none;">
         <h1 id="endTitle">You got a Score of:</h1>
