--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h2>Press the button below to start the quiz</h2>
         <button id="start" class="button">Start</button>
     </div>
-
     <div class="quiz" style="display: none;"> 
         <h1 id="category">Category</h1>
         <div id="titleContainer">
@@ -26,16 +25,17 @@
             <button id="answer4" class="button quizbutton">answer4</button>
         </div>
         <div id="Stats">
-            <h1 id="totalscore">Total Score</h1>
+            <h1 id="totalscore">Score</h1>
             <p id="score">score</p>
             <h1 id="progress">Questions Left</h1>
             <p id="questionsleft">number Left</p>
         </div>
-        <button id="restart" class="button" style="display: none;">Restart Quiz</button>
+        <button id="restart" class="button">Restart Quiz</button>
     </div>
     <div id="end" style="display: none;">
         <h1 id="endTitle">You got a Score of:</h1>
         <p id="endingScore">Ending Score</p>
+        <button id="restart2" class="button">Restart Quiz</button>
     </div>
     <script src="init.js"></script>
 </body>
